// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RawTag Snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex flex-row items-center justify-start gap-0.5 rounded-full py-0.5 pr-2 pl-2 border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <Text
      className="line-clamp-1 text-base font-medium text-f0-foreground"
    >
      test
    </Text>
  </View>
</View>
`;

exports[`RawTag Snapshot noBorder 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex flex-row items-center justify-start gap-0.5 rounded-full py-0.5 pr-2 pl-2"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <Text
      className="line-clamp-1 text-base font-medium text-f0-foreground"
    >
      test
    </Text>
  </View>
</View>
`;

exports[`RawTag Snapshot with icon 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex flex-row items-center justify-start gap-0.5 rounded-full py-0.5 pr-2 pl-1 border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-4 h-4 stroke-sm text-f0-icon"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M13.674 2.15a1.9 1.9 0 0 1 1.827 2.423l-.436 1.523a5.9 5.9 0 0 1 3.557 4.417l.714 4c.646 3.616-2.135 6.937-5.808 6.937h-3.056c-3.674 0-6.454-3.321-5.808-6.937l.714-4a5.9 5.9 0 0 1 3.555-4.417l-.435-1.523a1.9 1.9 0 0 1 1.827-2.423zm-2.514 5.3a4.1 4.1 0 0 0-4.01 3.38l-.714 3.999a4.1 4.1 0 0 0 4.036 4.821h3.056a4.1 4.1 0 0 0 4.036-4.821l-.714-4a4.1 4.1 0 0 0-4.01-3.378zm.84 1.2a.9.9 0 0 1 .9.9v.1h1.099a.9.9 0 1 1 0 1.8h-2.5a.6.6 0 0 0 0 1.2h1a2.397 2.397 0 0 1 .4 4.763v.137a.9.9 0 0 1-1.8 0v-.1H10a.9.9 0 0 1 0-1.8h2.5a.6.6 0 0 0 0-1.2h-1a2.4 2.4 0 0 1-.4-4.765V9.55a.9.9 0 0 1 .9-.9m-1.675-4.7a.1.1 0 0 0-.096.128l.45 1.573h.454l.054-.001h2.133l.45-1.572a.1.1 0 0 0-.096-.128z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="line-clamp-1 text-base font-medium text-f0-foreground"
    >
      test
    </Text>
  </View>
</View>
`;
